--- a/Goat_disease/goat_disease_flask/goat_disease_flask/flask_1/templates/layout.html
+++ b/Goat_disease/goat_disease_flask/goat_disease_flask/flask_1/templates/layout.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <style>body {
-    background: linear-gradient(to left, #f9faf8, #bfd2f0); /* Example gradient */}
+    background: linear-gradient(to left, #ef9abc, #86dff8); /* Example gradient */}
 </style>
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top" style="background-color: #021640">
